ファイル分割ガイドの内容を修正（完全版に更新）
- 分割の必要性と基準を詳細に記載
- View/ViewModel/Model の分割パターンを明文化
- 具体的な手順（ステップ0〜5）を提供
- 分割時の10の注意点を追加
- トラブルシューティング情報を充実
- ベストプラクティスとチェックリストを追加
- 推奨ディレクトリ構造の例を提示

--- a/参考資料/ファイル分割ガイド.md
+++ b/参考資料/ファイル分割ガイド.md
@@ -1,57 +1,209 @@
-# SimpleWord プロジェクト固有指示
+# ファイル分割ガイド
 
-## 技術スタック
-- Swift 専用（Objective-C は使用しない)
-- SwiftUI + Combine
-- Xcode プロジェクト
+作成日: 2025年10月28日
 
-## アーキテクチャ
-- Feature-First / Vertical Slice Architecture を採用
-- 各 Feature は `Features/` 配下に配置
-- View と ViewModel は責務を分離し、別ファイルで管理
+## 目次
+1. [分割の必要性](#分割の必要性)
+2. [分割基準](#分割基準)
+3. [分割パターン](#分割パターン)
+4. [分割時の注意点](#分割時の注意点)
+5. [具体的な手順](#具体的な手順)
+6. [トラブルシューティング](#トラブルシューティング)
 
-## データ管理
-- CSV ファイルからの読み込みを基本とする
-- 列数の整合性チェックを必須とする
-- パース失敗時は適切なエラーハンドリングを行う
+---
 
-## 命名規則
-- View: `〇〇View.swift`
-- ViewModel: `〇〇ViewModel.swift`
-- Model: `〇〇Model.swift`
+## 分割の必要性
 
-## 保守性
-- エラー修正や改修は、可能な限り短いセッションで完了できる構造とする
-- Viewファイルは項目の内容が分かる日本語コメントを付ける
+長大なファイルは以下の問題を引き起こします：
 
-## ファイル分割基準
+- **可読性の低下**: スクロールしないと全体が把握できない
+- **保守性の低下**: 修正箇所の特定が困難
+- **テスト困難**: 単一の責務に集中できていない
+- **並行作業の阻害**: 複数人で同じファイルを編集するとコンフリクト発生
+
+これらの問題を解決するため、適切な単位でファイルを分割します。
+
+---
+
+## 分割基準
 
 ### 行数の目安
-- View ファイル: 200〜300行を超えたら分割を検討
-- ViewModel ファイル: 300〜400行を超えたら分割を検討
-- 単一の構造体/クラス: 1つの責務に集中させる
+
+| ファイル種別 | 分割検討ライン | 理想的な範囲 |
+|------------|--------------|------------|
+| View ファイル | 200〜300行 | 100〜200行 |
+| ViewModel ファイル | 300〜400行 | 150〜300行 |
+| 単一の構造体/クラス | 200行 | 50〜150行 |
 
 ### 分割すべきサイン
-- スクロールしないと全体が把握できない
-- 複数の独立した機能が混在している
-- テストが書きにくい構造になっている
 
-### 分割パターン
-- **View の部品化**: Components サブディレクトリに UI 部品を分離
-- **ViewModel のロジック分離**: Services サブディレクトリにビジネスロジックを分離
-- **Model の関心分離**: Models サブディレクトリにデータ構造、バリデーション、変換処理を分離
+以下の兆候が見られたら分割を検討してください：
 
-### ディレクトリ構造例
+- [ ] スクロールしないと全体が把握できない
+- [ ] 複数の独立した機能が混在している
+- [ ] テストが書きにくい構造になっている
+- [ ] 修正時に関係ない部分まで目に入る
+- [ ] ファイル内で複数の責務が混在している
+- [ ] コードレビューで全体を把握するのに時間がかかる
+
+---
+
+## 分割パターン
+
+詳細な分割パターンと具体例については、以下のセクションを参照してください。
+
+### パターン1: View の部品化
+- UI コンポーネントを独立した View として切り出す
+- Components サブディレクトリに配置
+
+### パターン2: ViewModel のロジック分離
+- ビジネスロジックを責務ごとに分離
+- Services サブディレクトリに配置
+
+### パターン3: Model の関心分離
+- データ構造、バリデーション、変換処理を分離
+- Models サブディレクトリに配置
+
+---
+
+## 分割時の注意点
+
+### 重要な10のポイント
+
+1. **依存関係の把握**: 分割前に参照箇所を確認
+2. **段階的な分割**: 1つずつ切り出してビルド確認
+3. **@State / @Binding の扱い**: 親子間の状態管理に注意
+4. **プレビューの移動**: #Preview も新しいファイルに移動
+5. **ファイル名の一貫性**: 事前にディレクトリ構造を設計
+6. **Git コミット**: 小さく頻繁にコミット
+7. **アクセス修飾子**: internal/public を適切に設定
+8. **テストコード**: ディレクトリ構造に合わせて調整
+9. **日本語コメント**: 分割後のファイルに目的を記載
+10. **優先順位**: 影響範囲の小さいものから着手
+
+---
+
+## 具体的な手順
+
+### ステップ0: 事前準備
+```bash
+# 現在の変更をコミット
+git add .
+git commit -m "分割作業開始前の状態を保存"
+
+# 新しいブランチを作成（オプション）
+git checkout -b refactor/split-word-list-view
+```
+
+### ステップ1: 分割対象の特定
+```bash
+# 長いファイルを探す
+find Features -name "*.swift" -exec wc -l {} \; | sort -rn | head -10
+```
+
+### ステップ2: ディレクトリ構造の準備
+```bash
+# Components ディレクトリを作成
+mkdir -p Features/WordList/Components
+```
+
+### ステップ3: 1つ目の部品を分割
+1. 新しいファイルを作成
+2. 元のファイルを修正
+3. ビルド確認
+4. コミット
+
+### ステップ4: 2つ目以降の部品を分割（繰り返し）
+各部品ごとに同じ手順を繰り返します。
+
+### ステップ5: 最終確認
+- クリーンビルド
+- プレビュー動作確認
+- テスト実行
+- ディレクトリ構造確認
+
+---
+
+## 分割前チェックリスト
+
+- [ ] 分割対象のファイルが 200〜300 行を超えているか確認
+- [ ] 分割後のディレクトリ構造を設計
+- [ ] 依存関係を確認（どこから参照されているか）
+- [ ] Git で現在の状態をコミット（ロールバック用）
+- [ ] 1つずつ分割し、都度ビルド確認する計画を立てる
+
+---
+
+## トラブルシューティング
+
+### よくあるエラーと対処法
+
+1. **"Cannot find 'XXX' in scope"**
+   - 対処: `import SwiftUI` を追加
+
+2. **"@State は @Binding に変換できません"**
+   - 対処: `$` を付けて Binding として渡す
+
+3. **"循環参照が発生しています"**
+   - 対処: 依存関係を一方向に変更
+
+4. **"プレビューが表示されない"**
+   - 対処: `.constant()` でモックデータを提供
+
+---
+
+## ベストプラクティス
+
+### DO ✅
+- 1つずつ分割して都度ビルド確認
+- 意味のある単位でコミット
+- プレビューも移動して動作確認
+- 日本語コメントを追加
+- 依存関係を一方向に保つ
+
+### DON'T ❌
+- 複数ファイルを同時に分割
+- ビルド確認を省略
+- コミットをまとめすぎる
+- 過度な分割（10行のファイルを大量に作る）
+
+---
+
+## 推奨ディレクトリ構造
+
 ```
 Features/〇〇/
-├── 〇〇View.swift (メイン画面)
-├── 〇〇ViewModel.swift (メインロジック)
+├── 〇〇View.swift (メイン画面、100〜200行)
+├── 〇〇ViewModel.swift (メインロジック、150〜300行)
 ├── Components/ (UI部品)
+│   ├── 〇〇HeaderView.swift
+│   ├── 〇〇SearchBarView.swift
+│   └── 〇〇ContentView.swift
 ├── Services/ (ビジネスロジック)
+│   ├── 〇〇DataLoader.swift
+│   └── 〇〇FilterService.swift
 └── Models/ (データ構造)
+    ├── 〇〇Model.swift
+    └── 〇〇Validation.swift
 ```
 
-### 注意事項
-- 過度な分割は避ける（10行程度のファイルを大量に作らない）
-- 密接に関連する処理は同じファイルに置く
-- 分割後のファイル名で役割が明確に分かるようにする
+---
+
+## まとめ
+
+ファイル分割は以下の効果をもたらします：
+
+1. **可読性向上**: ファイルが短くなり、目的が明確になる
+2. **保守性向上**: 修正箇所の特定が容易になる
+3. **テスト容易性**: 小さな単位でテストを書ける
+4. **並行作業**: 複数人で同時に作業しやすい
+5. **再利用性**: 部品化された Component を他の Feature でも利用可能
+
+適切な分割基準に従い、段階的に進めることで、安全にリファクタリングを完了できます。
+
+---
+
+## 参照
+
+- `.github/copilot-instructions.md`: プロジェクト固有の分割基準
+- `SIMPLIFICATION_COMPLETION_REPORT.md`: 過去のリファクタリング事例
