docs: ファイル命名規則の確立とナンバリング+日本語タイトル化
- すべてのdocs/内ファイルをXX-YY_日本語タイトル.md形式に統一
- 03_開発ガイド/のファイルをリネーム:
  * FILE_ORGANIZATION.md → 03-01_ファイル配置規約.md
  * ADAPTIVE_LEARNING_GUIDE.md → 03-02_適応学習ガイド.md
  * TEST_GUIDE.md → 03-03_テストガイド.md
  * XCODE_FOLDER_SETUP_GUIDE.md → 03-05_Xcodeフォルダ設定ガイド.md
- 04_レポート/のファイルをリネーム:
  * CSV_FIXED_COLUMN_CHOICE_GENERATION_REPORT.md → 04-05_CSV固定列選択肢生成レポート.md
  * CSV_FIXED_COLUMN_CHOICE_GENERATION_SUMMARY.md → 04-06_CSV固定列選択肢生成サマリ.md
- 99_アーカイブ/の主要ファイルをリネーム（6個）
- 03-01_ファイル配置規約.mdにナンバリングルールを追加
- .github/copilot-instructions.mdに命名規則を最重要項目として追加

これにより、AIが新規ドキュメントを作成する際、
必ずナンバリング+日本語タイトルで作成されるようになります。

--- a/docs/03_開発ガイド/03-01_ファイル配置規約.md
+++ b/docs/03_開発ガイド/03-01_ファイル配置規約.md
@@ -1,7 +1,90 @@
 # ファイル配置規約
 
 **作成日**: 2025年11月7日  
+**最終更新**: 2025年11月7日  
 **目的**: プロジェクトルートの整理整頓とファイル管理の明確化
+
+---
+
+## 📝 ファイル命名規則（重要）
+
+### ✅ docs/配下のファイル命名ルール
+
+**すべてのドキュメントファイルは、ナンバリング+日本語タイトルで命名してください。**
+
+#### 形式
+```
+XX-YY_日本語タイトル.md
+```
+
+- `XX`: 親フォルダ番号（01, 02, 03, 04, 99）
+- `YY`: ファイル番号（01, 02, 03...）
+- タイトル: **日本語で記述**（英語タイトルは禁止）
+
+#### 各フォルダの例
+
+**01_仕様書/**
+```
+01-01_プロジェクト概要.md
+01-02_アーキテクチャ仕様.md
+01-03_機能仕様.md
+```
+
+**02_実装ガイド/**
+```
+02-01_開発環境構築.md
+02-02_コーディング規約.md
+```
+
+**03_開発ガイド/**
+```
+03-01_ファイル配置規約.md
+03-02_適応学習ガイド.md
+03-03_テストガイド.md
+03-04_AI活用ガイド.md
+03-05_Xcodeフォルダ設定ガイド.md
+```
+
+**04_レポート/**
+```
+04-01_変更履歴.md
+04-02_技術的課題と解決策.md
+04-03_コード品質改善レポート.md
+04-05_CSV固定列選択肢生成レポート.md
+```
+
+**99_アーカイブ/**
+```
+99-01_README復元版.md
+99-02_README_V2.md
+99-03_カスタム指示.md
+```
+
+### ❌ 禁止される命名例
+
+```
+❌ FILE_ORGANIZATION.md          # 英語タイトル
+❌ TEST_GUIDE.md                 # 英語タイトル
+❌ ADAPTIVE_LEARNING_GUIDE.md   # 英語タイトル
+❌ CSV_FIXED_COLUMN_REPORT.md   # 英語タイトル、ナンバリングなし
+❌ guide.md                      # ナンバリングなし、曖昧
+```
+
+### 🤖 AI（GitHub Copilot）への指示
+
+**新規ドキュメント作成時は、必ずナンバリング+日本語タイトルで命名してください。**
+
+❌ 悪い例:
+```
+「テストガイドを作成して」
+→ TEST_GUIDE.md が作成される（英語タイトル）
+```
+
+✅ 良い例:
+```
+「03-06_パフォーマンステストガイド.md を docs/03_開発ガイド/ に作成して」
+→ 正しい命名規則で作成される
+```
 
 ---
 
@@ -34,26 +117,41 @@ quiz-app/
 
 ### 1. ドキュメントファイル（.md）
 
+**重要**: すべてのファイルは `XX-YY_日本語タイトル.md` 形式で命名してください。
+
 #### ガイド・チュートリアル
 **配置先**: `docs/03_開発ガイド/`
 
-**例**:
-- `ADAPTIVE_LEARNING_GUIDE.md` → `docs/03_開発ガイド/`
-- `TEST_GUIDE.md` → `docs/03_開発ガイド/`
-- `XCODE_FOLDER_SETUP_GUIDE.md` → `docs/03_開発ガイド/`
+**命名例**:
+- `03-01_ファイル配置規約.md`
+- `03-02_適応学習ガイド.md`
+- `03-03_テストガイド.md`
+- `03-04_AI活用ガイド.md`
+- `03-05_Xcodeフォルダ設定ガイド.md`
 
 #### 実装レポート・設計書
 **配置先**: `docs/04_レポート/`
 
-**例**:
-- `CSV_FIXED_COLUMN_CHOICE_GENERATION_REPORT.md` → `docs/04_レポート/`
-- `FEATURE_IMPLEMENTATION_SUMMARY.md` → `docs/04_レポート/`
+**命名例**:
+- `04-01_変更履歴.md`
+- `04-02_技術的課題と解決策.md`
+- `04-03_コード品質改善レポート.md`
+- `04-05_CSV固定列選択肢生成レポート.md`
 
 #### 仕様書
 **配置先**: `docs/01_仕様書/`
 
+**命名例**:
+- `01-01_プロジェクト概要.md`
+- `01-02_アーキテクチャ仕様.md`
+- `01-04_CSV仕様.md`
+
 #### 実装ガイド
 **配置先**: `docs/02_実装ガイド/`
+
+**命名例**:
+- `02-01_開発環境構築.md`
+- `02-02_コーディング規約.md`
 
 #### アーカイブ（古いドキュメント）
 **配置先**: `docs/99_アーカイブ/`
