docs: AI自動ドキュメント分類フローの実装
- copilot-instructions.mdに自動判断フローを追加
- 03-01_ファイル配置規約.mdに自動分類の説明を追加

【実装内容】
- ユーザーがフォルダ/ファイル名を指定しない場合、
  AIが内容を分析して自動的に適切な場所に配置
- キーワードベースの判断基準（5種類のカテゴリ）
- 自動ナンバリング（既存ファイルを確認して次の番号を割り当て）
- 日本語タイトル自動生成
- 実例付きの詳細フロー

【ユースケース】
Before: 「テストガイドを作成して」→ ルート直下に英語ファイル
After:  AIが自動判断 → docs/03_開発ガイド/03-06_テストガイド.md

これにより、初心者でも正しい場所に正しい命名規則で
ドキュメントが作成されるようになります。

--- a/docs/02_実装ガイド/02-02_コーディング規約.md
+++ b/docs/02_実装ガイド/02-02_コーディング規約.md
@@ -1,13 +1,17 @@
 # 02-02 コーディング規約
 
 **文書番号**: 02-02  
-**最終更新**: 2025-11-04  
-**バージョン**: 2.0  
+**最終更新**: 2025-11-08  
+**バージョン**: 3.0  
 **ステータス**: 最新
 
 ---
 
-## 📋 目次
+> ⚠️ **重要**: コードを書く前に必ず以下を読んでください  
+> ⭐ **[02-03_セキュリティとパフォーマンス設計方針.md](02-03_セキュリティとパフォーマンス設計方針.md)** - 14の必須要件  
+> 📖 **[02-01_グローバルコーディング規約.md](02-01_グローバルコーディング規約.md)** - 基本方針
+
+---
 
 1. [基本方針](#基本方針)
 2. [命名規則](#命名規則)
@@ -523,6 +527,78 @@ var globalQuizState = QuizState()
 
 ---
 
+## 🔒 セキュリティとパフォーマンス
+
+本プロジェクトでは、以下のセキュリティとパフォーマンス要件を厳守します。
+
+### 必須要件サマリー
+
+1. **Swift 6.0使用**: 並行性とデータ競合防止
+2. **厳密なエラー処理**: 雑な例外処理を禁止
+3. **可変引数禁止**: 型安全性の確保
+4. **任意のコード・SQL実行禁止**: セキュリティホールの防止
+5. **ログの機密情報保護**: 個人情報・内部情報を出力しない
+6. **タイムゾーン明示**: 時刻処理の信頼性
+7. **浮動小数点の丸め統一**: 数値演算の予測可能性
+8. **ライブラリ警告対応**: 警告を無視しない
+9. **同期・非同期の適切な分離**: 機能停止の防止
+10. **リソース解放**: メモリリーク防止
+11. **ハードコード禁止**: 設定の外部化
+12. **パフォーマンス最適化**: 遅いコードを書かない
+13. **セキュアな乱数**: 一般乱数を使用しない
+14. **効率的なログ出力**: パフォーマンスを落とさない
+
+### クイックリファレンス
+
+```swift
+// ✅ Swift 6.0の並行性
+actor QuizSessionStore {
+    private var sessions: [String: QuizSession] = [:]
+    func addSession(_ session: QuizSession) {
+        sessions[session.id] = session
+    }
+}
+
+// ✅ 厳密なエラー処理
+func loadCSV() throws -> [QuestionItem] {
+    do {
+        return try parseCSV(data: loadData())
+    } catch let error as CSVError {
+        logger.error("CSV読み込みエラー: \(error.localizedDescription)")
+        throw error
+    }
+}
+
+// ✅ タイムゾーン明示
+let formatter = DateFormatter()
+formatter.timeZone = TimeZone(identifier: "Asia/Tokyo")!
+formatter.locale = Locale(identifier: "ja_JP")
+
+// ✅ 浮動小数点の丸め
+let score = 85.6789.rounded(toPlaces: 2)  // 85.68
+
+// ✅ リソース解放
+func processFile(at url: URL) throws {
+    let handle = try FileHandle(forReadingFrom: url)
+    defer { try? handle.close() }
+    // 処理
+}
+
+// ✅ パフォーマンス最適化
+let itemsDict = items.toDictionary()  // O(1)検索用
+let item = itemsDict[id]
+
+// ✅ 安全なログ出力
+logger.debug("セッション開始: \(sessionId.masked())")  // 個人情報マスク
+```
+
+### 詳細ドキュメント
+
+**すべての要件の詳細は以下を参照してください**:
+- **[02-03_セキュリティとパフォーマンス設計方針.md](./02-03_セキュリティとパフォーマンス設計方針.md)** - 完全なガイドライン
+
+---
+
 ## ✅ チェックリスト
 
 新しいコードを書く前に確認：
@@ -532,6 +608,8 @@ var globalQuizState = QuizState()
 - [ ] 日本語コメントで意図を説明しているか？
 - [ ] 単一責任の原則を守っているか？
 - [ ] 非推奨構文を使用していないか？
+- [ ] **セキュリティ要件を満たしているか？（02-03参照）**
+- [ ] **パフォーマンス要件を満たしているか？（02-03参照）**
 - [ ] テストを書いたか？
 - [ ] ドキュメントを更新したか？
 
@@ -539,6 +617,7 @@ var globalQuizState = QuizState()
 
 ## 📚 関連ドキュメント
 
+- **セキュリティとパフォーマンス**: `02-03_セキュリティとパフォーマンス設計方針.md` ⭐ **必読**
 - **アーキテクチャ**: `01-02_アーキテクチャ仕様.md`
 - **ディレクトリ構造**: `02-03_ディレクトリ構造.md`
 - **非推奨構文**: `DEPRECATION_GUIDE.md`（ルート）
@@ -547,6 +626,7 @@ var globalQuizState = QuizState()
 ---
 
 **文書履歴**:
-- 2025-11-04: 初版作成、グローバルコーディング規約を統合
+- 2025-11-07: v3.0 - セキュリティとパフォーマンス要件を追加
+- 2025-11-04: v2.0 - 初版作成、グローバルコーディング規約を統合
 
 **管理者**: SimpleWord開発チーム
