docs: AI自動ドキュメント分類フローの実装
- copilot-instructions.mdに自動判断フローを追加
- 03-01_ファイル配置規約.mdに自動分類の説明を追加

【実装内容】
- ユーザーがフォルダ/ファイル名を指定しない場合、
  AIが内容を分析して自動的に適切な場所に配置
- キーワードベースの判断基準（5種類のカテゴリ）
- 自動ナンバリング（既存ファイルを確認して次の番号を割り当て）
- 日本語タイトル自動生成
- 実例付きの詳細フロー

【ユースケース】
Before: 「テストガイドを作成して」→ ルート直下に英語ファイル
After:  AIが自動判断 → docs/03_開発ガイド/03-06_テストガイド.md

これにより、初心者でも正しい場所に正しい命名規則で
ドキュメントが作成されるようになります。

--- a/docs/03_開発ガイド/03-01_ファイル配置規約.md
+++ b/docs/03_開発ガイド/03-01_ファイル配置規約.md
@@ -70,20 +70,73 @@ XX-YY_日本語タイトル.md
 ❌ guide.md                      # ナンバリングなし、曖昧
 ```
 
-### 🤖 AI（GitHub Copilot）への指示
+### 🤖 AI（GitHub Copilot）自動分類フロー
 
-**新規ドキュメント作成時は、必ずナンバリング+日本語タイトルで命名してください。**
+**ユーザーがフォルダやファイル名を指定しない場合、AIが以下のフローで自動判断します。**
 
-❌ 悪い例:
+#### 判断基準
+
+1. **仕様書系** → `docs/01_仕様書/`
+   - キーワード: 「仕様」「要件」「設計」「アーキテクチャ」「API仕様」
+
+2. **実装ガイド系** → `docs/02_実装ガイド/`
+   - キーワード: 「実装方法」「コーディング」「規約」「ベストプラクティス」
+
+3. **開発ガイド系** → `docs/03_開発ガイド/`
+   - キーワード: 「ガイド」「チュートリアル」「使い方」「セットアップ」「テスト」
+
+4. **レポート系** → `docs/04_レポート/`
+   - キーワード: 「レポート」「報告」「実装結果」「変更履歴」「サマリ」「完了」
+
+5. **アーカイブ系** → `docs/99_アーカイブ/`
+   - キーワード: 「アーカイブ」「古い」「バックアップ」「廃止」
+
+#### 自動処理フロー
+
+1. **内容分析**: ユーザー指示からキーワードを抽出
+2. **フォルダ判定**: 上記の判断基準で配置先を決定
+3. **ナンバリング**: 既存ファイルを確認し、次の番号を自動割り当て
+4. **タイトル生成**: 日本語で簡潔なタイトルを生成（5-15文字程度）
+5. **ファイル作成**: `XX-YY_日本語タイトル.md`形式で作成
+
+#### 実例
+
+**ユーザー**: 「テストの実行方法をドキュメント化して」
+
+**AIの処理**:
+```
+1. 分析: 「テスト」「方法」→ 開発ガイド系
+2. フォルダ: docs/03_開発ガイド/
+3. ナンバリング: 既存の03-05まで確認 → 次は03-06
+4. タイトル: テスト実行ガイド
+5. 作成: docs/03_開発ガイド/03-06_テスト実行ガイド.md
+```
+
+**ユーザー**: 「今回の実装をまとめて」
+
+**AIの処理**:
+```
+1. 分析: 「まとめて」→ レポート系
+2. フォルダ: docs/04_レポート/
+3. ナンバリング: 既存の04-06まで確認 → 次は04-07
+4. タイトル: 実装レポート
+5. 作成: docs/04_レポート/04-07_実装レポート.md
+```
+
+---
+
+### 🎯 AI作成時の指示（明示的指定も可能）
+
+**自動判断に任せる場合**:
 ```
 「テストガイドを作成して」
-→ TEST_GUIDE.md が作成される（英語タイトル）
+→ AI が自動判断して docs/03_開発ガイド/03-06_テストガイド.md を作成
 ```
 
-✅ 良い例:
+**明示的に指定する場合**:
 ```
 「03-06_パフォーマンステストガイド.md を docs/03_開発ガイド/ に作成して」
-→ 正しい命名規則で作成される
+→ 指定通りの場所・ファイル名で作成
 ```
 
 ---
