feat: ダークモード実装を完全削除し、強力な保護機構を設置
- 791件のdark:クラスを一括削除（ライトモードのみに統一）
- ダークモード禁止チェッカー（check-no-dark-mode.mjs）を追加
- pre-commitフックに自動チェックを組み込み
- .ai-instructions/CRITICAL_RULES.md を追加（AI向け厳格ルール）
- .copilot-instructions.md を更新（ダークモード禁止を明記）
- package.jsonにcheck:no-dark-modeコマンドを追加

再実装の余地:
- DARK_MODE_GUIDE.md（完全な仕様書）は保持
- CSS変数定義はすべて残存
- 設計思想・アーキテクチャは文書化済み

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -1,12 +1,40 @@
-# Copilot Instructions - Light/Dark Mode Isolation
+# Copilot Instructions - 🚨 CRITICAL RULES 🚨
 
-## ライト/ダークモード変更の絶対分離ルール
+## ⛔ 絶対禁止: ダークモードの使用禁止
 
-### 1. 必須原則
+**現在の方針: ダークモードは使用しない**
 
-- **ライトモードの変更は dark: プレフィックスを含むクラスに絶対に影響させない**
-- **ダークモードの変更は dark: プレフィックスなしのクラスに絶対に影響させない**
-- **両モードは完全に独立したスタイル定義を持つ**
+```tsx
+// ❌ 絶対禁止 - dark:プレフィックスを使用してはいけない
+<div className="bg-white dark:bg-gray-800">
+<button className="text-gray-900 dark:text-gray-100">
+
+// ✅ 正解 - ライトモードのみ
+<div className="bg-white">
+<button className="text-gray-900">
+```
+
+**理由:**
+
+- ダークモード機能は再開発の余地として残しているが、現在は使用しない
+- 将来的に必要になれば、ユーザーからの明示的な指示の下で再実装する
+
+**違反時:**
+
+- コミット前チェックでブロックされる
+- 即座にrevertが必要
+
+---
+
+## ⚠️ 旧ルール（現在は無効）
+
+以下のルールは**現在使用していません**。参考として残しています。
+
+### 1. 旧原則（無効）
+
+- ~~ライトモードの変更は dark: プレフィックスを含むクラスに絶対に影響させない~~
+- ~~ダークモードの変更は dark: プレフィックスなしのクラスに絶対に影響させない~~
+- ~~両モードは完全に独立したスタイル定義を持つ~~
 
 ### 2. Tailwind CSS クラス使用規則
 
