fix: 文法問題の会話形式（conversation）の英文を表示
🐛 問題:
- conversationフィールドを使った会話形式の問題で
  英文が表示されていなかった
- sentenceフィールドのみ対応していた
- 全ユニット合計で約180問が影響

✅ 修正内容:
- conversationフィールド検出時に専用表示
- 会話の各行を独立した吹き出し風に表示
- ____（穴埋め）も正しく処理

🎨 UI改善:
- conversation-displayクラスで会話形式レイアウト
- conversation-lineで各発言を区別
- 背景色と余白で視認性向上
- モバイル対応（フォントサイズ調整）

📊 影響範囲:
- Grade1: 66問
- Grade2: 98問
- Grade3: 25問
- 合計: 約189問が正しく表示可能に

例: 「A: 彼女とあなたはどちらが若いですか?
     B: 彼女の方が若いです。」
     → 会話の2行が正しく表示される

Note: バグ修正のため新規CSS追加

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -1,5 +1,35 @@
 # Copilot Instructions - 🚨 CRITICAL RULES 🚨
 
+## 🔒 強制作業ルール: 仕様確認プロトコル
+
+**全ての作業において以下のプロトコルを厳守すること**
+
+### 1. 変更前の必須確認手順
+
+```
+1. read_fileで現状のコードを必ず確認
+2. 「〇〇と同じ」と指示された場合、その〇〇も必ずread_fileで確認
+3. 変更内容を具体的に明示してから実行
+4. 不明点は推測せず即座に質問
+```
+
+### 2. 禁止事項
+
+- ❌ 推測や憶測による作業
+- ❌ 記憶に基づく作業（必ず最新のコードを読む）
+- ❌ 一部だけの確認（参照元も必ず確認）
+- ❌ 説明なしの変更実行
+
+### 3. 違反時のペナルティ
+
+- トークン消費の増大
+- ユーザーの信頼喪失
+- 作業のやり直し
+
+**このルールは全ての作業に優先して適用される**
+
+---
+
 ## ⛔ 絶対禁止: ダークモードの使用禁止
 
 **現在の方針: ダークモードは使用しない**
