chore: suppress markdownlint in worksheets

--- a/docs/quality/pattern-learning/J_2023_5.md
+++ b/docs/quality/pattern-learning/J_2023_5.md
@@ -1,9 +1,13 @@
+<!-- markdownlint-disable MD004 MD010 -->
+
 # J_2023_5
 
 ## 0. 原文（正本）
+
 - 参照: public/data/passages/1_passages-original/J_2023_5.txt
 
 ## 1. /分割
+
 - We cannot live / even a day / without water, / so getting water / is very important / in our daily lives.
 - In Japan, / we can get water / very easily.
 - If we turn on the water tap, / we can get clean and safe water / anytime.
@@ -24,6 +28,7 @@
 - There are two big reasons.
 
 ## 2. ()分割
+
 - We cannot live < even a day > < without water >, so getting water is very important < in our daily lives >.
 - < In Japan >, we can get water very easily.
 - (If we turn on the water tap), we can get clean and safe water < anytime >.
@@ -44,65 +49,69 @@
 - There are two big reasons.
 
 ## 3. 直訳（フレーズ訳）
+
 - 英文: public/data/passages/3_passages-for-phrase-work/J_2023_5.txt
 - 日本語: public/data/passages/5_passages-for-phrase-work-ja/J_2023_5.txt（作成済み）
 
 ## 4. 一文訳
+
 - We cannot live even a day without water, so getting water is very important in our daily lives.
-	私たちは水なしでは一日たりとも生きられないので、水を得ることは私たちの日常生活において非常に重要です。
+  私たちは水なしでは一日たりとも生きられないので、水を得ることは私たちの日常生活において非常に重要です。
 - In Japan, we can get water very easily.
-	日本では、私たちは水をとても簡単に得ることができます。
+  日本では、私たちは水をとても簡単に得ることができます。
 - If we turn on the water tap, we can get clean and safe water anytime.
-	水道の蛇口をひねれば、いつでもきれいで安全な水を得ることができます。
+  水道の蛇口をひねれば、いつでもきれいで安全な水を得ることができます。
 - You may think you don't have to worry about water if you live in Japan.
-	あなたは日本に住んでいれば水について心配する必要はないと思うかもしれません。
+  あなたは日本に住んでいれば水について心配する必要はないと思うかもしれません。
 - However, do you know how many people on the Earth can get clean and safe water?
-	しかし、地球上で何人の人がきれいで安全な水を得ることができるか知っていますか？
+  しかし、地球上で何人の人がきれいで安全な水を得ることができるか知っていますか？
 
 - According to UNICEF, between 2016 and 2020, the global population who can get clean and safe water at home increased from 70% to 74%.
-	ユニセフによると、2016年から2020年の間に、家できれいで安全な水を得られる世界の人口は70%から74%に増加しました。
+  ユニセフによると、2016年から2020年の間に、家できれいで安全な水を得られる世界の人口は70%から74%に増加しました。
 - However, about 2 billion people around the world cannot get clean and safe water.
-	しかし、世界中の約20億人がきれいで安全な水を得ることができません。
+  しかし、世界中の約20億人がきれいで安全な水を得ることができません。
 - The water shortage is especially serious in African countries.
-	水不足は特にアフリカ諸国で深刻です。
+  水不足は特にアフリカ諸国で深刻です。
 - People living there have to walk a long way just to get clean water for the day.
-	そこに住む人々は、その日のきれいな水を得るためだけに長い道のりを歩かなければなりません。
+  そこに住む人々は、その日のきれいな水を得るためだけに長い道のりを歩かなければなりません。
 - Many of them depend on dirty rivers, ponds and even puddles for their drinking water.
-	彼らの多くは、飲料水のために汚い川や池、さらには水たまりに頼っています。
+  彼らの多くは、飲料水のために汚い川や池、さらには水たまりに頼っています。
 - There are no clean water resources near their villages, so they can't wash their hands after they touch something dirty.
-	彼らの村の近くにはきれいな水源がないので、何か汚いものに触った後に手を洗うことができません。
+  彼らの村の近くにはきれいな水源がないので、何か汚いものに触った後に手を洗うことができません。
 - They have to drink water from dirty rivers and puddles even if they know it is bad for their health.
-	彼らは健康に悪いと知っていても、汚い川や水たまりから水を飲まなければなりません。
+  彼らは健康に悪いと知っていても、汚い川や水たまりから水を飲まなければなりません。
 - WHO believes that every year, about 0.3 million children die of diarrhea caused by drinking dirty water.
-	WHOは、毎年約30万人の子供たちが汚い水を飲むことによって引き起こされる下痢で死亡していると考えています。
+  WHOは、毎年約30万人の子供たちが汚い水を飲むことによって引き起こされる下痢で死亡していると考えています。
 
 - So many people around the world cannot get clean and safe water.
-	世界中の非常に多くの人々がきれいで安全な水を得ることができません。
+  世界中の非常に多くの人々がきれいで安全な水を得ることができません。
 - Why?
-	なぜでしょうか？
+  なぜでしょうか？
 - There are two big reasons.
-	2つの大きな理由があります。
+  2つの大きな理由があります。
 
 ## 5. 語句分割
-- + We + cannot + live + even a day + without + water + so + getting + water + is + very + important + in our daily lives .
-- + In Japan + we + can + get + water + very + easily .
-- + If + we + turn + on + the + water + tap + we + can + get + clean + and + safe + water + anytime .
-- + You + may + think + you + don't + have to + worry + about + water + if + you + live + in Japan .
-- + However + do + you + know + how + many + people + on the Earth + can + get + clean + and + safe + water ?
 
-- + According to + UNICEF + between 2016 and 2020 + the global population + who + can + get + clean + and + safe + water + at home + increased + from 70% to 74% .
-- + However + about 2 billion people + around the world + cannot + get + clean + and + safe + water .
-- + The + water shortage + is + especially + serious + in African countries .
-- + People + living there + have to + walk + a long way + just to + get + clean + water + for the day .
-- + Many of them + depend + on dirty rivers + ponds + and + even + puddles + for their drinking water .
-- + There + are + no + clean + water + resources + near + their + villages + so + they + can't + wash + their + hands + after + they + touch + something + dirty .
-- + They + have to + drink + water + from dirty rivers and puddles + even if + they + know + it + is + bad + for their health .
-- + WHO + believes + that + every year + about 0.3 million children + die + of + diarrhea + caused by + drinking + dirty water .
+- - We + cannot + live + even a day + without + water + so + getting + water + is + very + important + in our daily lives .
+- - In Japan + we + can + get + water + very + easily .
+- - If + we + turn + on + the + water + tap + we + can + get + clean + and + safe + water + anytime .
+- - You + may + think + you + don't + have to + worry + about + water + if + you + live + in Japan .
+- - However + do + you + know + how + many + people + on the Earth + can + get + clean + and + safe + water ?
 
-- + So many people + around the world + cannot + get + clean + and + safe + water .
-- + Why ?
-- + There + are + two + big + reasons .
+- - According to + UNICEF + between 2016 and 2020 + the global population + who + can + get + clean + and + safe + water + at home + increased + from 70% to 74% .
+- - However + about 2 billion people + around the world + cannot + get + clean + and + safe + water .
+- - The + water shortage + is + especially + serious + in African countries .
+- - People + living there + have to + walk + a long way + just to + get + clean + water + for the day .
+- - Many of them + depend + on dirty rivers + ponds + and + even + puddles + for their drinking water .
+- - There + are + no + clean + water + resources + near + their + villages + so + they + can't + wash + their + hands + after + they + touch + something + dirty .
+- - They + have to + drink + water + from dirty rivers and puddles + even if + they + know + it + is + bad + for their health .
+- - WHO + believes + that + every year + about 0.3 million children + die + of + diarrhea + caused by + drinking + dirty water .
+
+- - So many people + around the world + cannot + get + clean + and + safe + water .
+- - Why ?
+- - There + are + two + big + reasons .
 
 ## 6. 重要な判断メモ
-- 原文の空欄（___）除去・末尾文の正規化・phrase-workの余分な文削除を反映済み。
+
+- 原文の空欄（\_\_\_）除去・末尾文の正規化・phrase-workの余分な文削除を反映済み。
 - phrase-work（英/日）を1文1行で分割済み。
