--- a/docs/quality/pattern-learning/J_2024_5.md
+++ b/docs/quality/pattern-learning/J_2024_5.md
@@ -1,9 +1,13 @@
+<!-- markdownlint-disable MD004 MD010 -->
+
 # J_2024_5
 
 ## 0. 原文（正本）
+
 - 参照: public/data/passages/1_passages-original/J_2024_5.txt
 
 ## 1. /分割
+
 - Since old times, / Japanese people / have experienced / natural disasters / many times.
 - They cannot be stopped / because they come from nature.
 - When a typhoon is coming, / weather reports show us / which course the typhoon can take.
@@ -32,6 +36,7 @@
 - However, / it is important / to get the right information and skills / to prepare for natural disasters.
 
 ## 2. ()分割
+
 - < Since old times >, Japanese people have experienced natural disasters many times.
 - They cannot be stopped (because they come from nature).
 - < When a typhoon is coming >, weather reports show us (which course the typhoon can take).
@@ -60,87 +65,91 @@
 - However, it is important < to get the right information and skills > < to prepare for natural disasters >.
 
 ## 3. 直訳（フレーズ訳）
+
 - 英文: public/data/passages/3_passages-for-phrase-work/J_2024_5.txt
 - 日本語: public/data/passages/5_passages-for-phrase-work-ja/J_2024_5.txt（作成済み）
 
 ## 4. 一文訳
+
 - Since old times, Japanese people have experienced natural disasters many times.
-	昔から、日本人は何度も自然災害を経験してきました。
+  昔から、日本人は何度も自然災害を経験してきました。
 - They cannot be stopped because they come from nature.
-	自然災害は自然から来るため、止めることができません。
+  自然災害は自然から来るため、止めることができません。
 - When a typhoon is coming, weather reports show us which course the typhoon can take.
-	台風が来ているとき、天気予報は台風が取りうる進路を示してくれます。
+  台風が来ているとき、天気予報は台風が取りうる進路を示してくれます。
 - However, we cannot stop the typhoon.
-	しかし、私たちは台風を止めることはできません。
+  しかし、私たちは台風を止めることはできません。
 - Also we cannot tell when and where the next earthquake will happen.
-	また、次の地震がいつどこで起こるかを予測することもできません。
+  また、次の地震がいつどこで起こるかを予測することもできません。
 - Even the highest technology cannot help us avoid all these natural disasters.
-	最高の技術をもってしても、これらすべての自然災害を避けることはできません。
+  最高の技術をもってしても、これらすべての自然災害を避けることはできません。
 
 - Then what should we do to prepare for natural disasters?
-	では、自然災害に備えるために私たちは何をすべきでしょうか？
+  では、自然災害に備えるために私たちは何をすべきでしょうか？
 - First, we need to get the right information about them.
-	まず、私たちは自然災害についての正しい情報を得る必要があります。
+  まず、私たちは自然災害についての正しい情報を得る必要があります。
 
 - Look at the graph.
-	グラフを見てください。
+  グラフを見てください。
 - It shows the ways people want to use to get disaster information.
-	それは人々が災害情報を得るために使いたい方法を示しています。
+  それは人々が災害情報を得るために使いたい方法を示しています。
 - According to the graph, many people want to use TV and radio for disaster information.
-	グラフによると、多くの人々が災害情報のためにテレビとラジオを使いたいと考えています。
+  グラフによると、多くの人々が災害情報のためにテレビとラジオを使いたいと考えています。
 - More than 80 percent of people choose TV, and about 48 percent of people choose radio as a useful source.
-	80パーセント以上の人々がテレビを選び、約48パーセントの人々が有用な情報源としてラジオを選んでいます。
+  80パーセント以上の人々がテレビを選び、約48パーセントの人々が有用な情報源としてラジオを選んでいます。
 - On the other hand, the graph shows that many people are trying to get the information on the Internet.
-	一方、グラフは多くの人々がインターネット上で情報を得ようとしていることを示しています。
+  一方、グラフは多くの人々がインターネット上で情報を得ようとしていることを示しています。
 - More than 35 percent of people think that social media give them useful information.
-	35パーセント以上の人々がソーシャルメディアが有用な情報を提供すると考えています。
+  35パーセント以上の人々がソーシャルメディアが有用な情報を提供すると考えています。
 
 - It is also important for us to think of the things we can do now.
-	私たちにとって、今できることを考えることも重要です。
+  私たちにとって、今できることを考えることも重要です。
 - Actually, we can do a lot of things to prepare for natural disasters.
-	実際、私たちは自然災害に備えるために多くのことができます。
+  実際、私たちは自然災害に備えるために多くのことができます。
 - For example, many cities have made evacuation maps which show where to go in natural disasters such as big earthquakes.
-	例えば、多くの都市は、大地震などの自然災害時にどこに行くべきかを示す避難マップを作成しています。
+  例えば、多くの都市は、大地震などの自然災害時にどこに行くべきかを示す避難マップを作成しています。
 - If we share the maps with our family or our neighbors, we can prepare better.
-	家族や近所の人々とマップを共有すれば、より良く備えることができます。
+  家族や近所の人々とマップを共有すれば、より良く備えることができます。
 - Since old times, evacuation maps and drills have saved many people from natural disasters.
-	昔から、避難マップと訓練は多くの人々を自然災害から救ってきました。
+  昔から、避難マップと訓練は多くの人々を自然災害から救ってきました。
 
 - Nobody can know when and where a natural disaster will happen.
-	誰も自然災害がいつどこで起こるかを知ることはできません。
+  誰も自然災害がいつどこで起こるかを知ることはできません。
 - Today, we experience many big natural disasters, but we are too busy with our daily lives to think about them every day.
-	今日、私たちは多くの大きな自然災害を経験していますが、私たちは日常生活に忙しすぎて毎日それらについて考えることができません。
+  今日、私たちは多くの大きな自然災害を経験していますが、私たちは日常生活に忙しすぎて毎日それらについて考えることができません。
 - However, it is important to get the right information and skills to prepare for natural disasters.
-	しかし、自然災害に備えるための正しい情報とスキルを得ることが重要です。
+  しかし、自然災害に備えるための正しい情報とスキルを得ることが重要です。
 
 ## 5. 語句分割
-- + Since old times + Japanese + people + have experienced + natural disasters + many times .
-- + They + cannot + be + stopped + because + they + come + from + nature .
-- + When + a typhoon + is + coming + weather reports + show + us + which + course + the typhoon + can + take .
-- + However + we + cannot + stop + the typhoon .
-- + Also + we + cannot + tell + when + and + where + the + next + earthquake + will + happen .
-- + Even + the + highest + technology + cannot + help + us + avoid + all + these + natural + disasters .
 
-- + Then + what + should + we + do + to prepare + for natural disasters ?
-- + First + we + need + to get + the right information + about + them .
+- - Since old times + Japanese + people + have experienced + natural disasters + many times .
+- - They + cannot + be + stopped + because + they + come + from + nature .
+- - When + a typhoon + is + coming + weather reports + show + us + which + course + the typhoon + can + take .
+- - However + we + cannot + stop + the typhoon .
+- - Also + we + cannot + tell + when + and + where + the + next + earthquake + will + happen .
+- - Even + the + highest + technology + cannot + help + us + avoid + all + these + natural + disasters .
 
-- + Look + at + the + graph .
-- + It + shows + the ways + people + want + to use + to get + disaster information .
-- + According to the graph + many + people + want + to use + TV + and + radio + for disaster information .
-- + More than 80 percent of people + choose + TV + and + about 48 percent of people + choose + radio + as + a useful source .
-- + On the other hand + the graph + shows + that + many + people + are trying + to get + the + information + on the Internet .
-- + More than 35 percent of people + think + that + social media + give + them + useful information .
+- - Then + what + should + we + do + to prepare + for natural disasters ?
+- - First + we + need + to get + the right information + about + them .
 
-- + It + is + also + important + for us + to think + of the things + we + can + do + now .
-- + Actually + we + can + do + a lot of + things + to prepare + for natural disasters .
-- + For example + many + cities + have made + evacuation maps + which + show + where + to go + in natural disasters + such as + big earthquakes .
-- + If + we + share + the maps + with + our + family + or + our + neighbors + we + can + prepare + better .
-- + Since old times + evacuation maps + and + drills + have saved + many + people + from natural disasters .
+- - Look + at + the + graph .
+- - It + shows + the ways + people + want + to use + to get + disaster information .
+- - According to the graph + many + people + want + to use + TV + and + radio + for disaster information .
+- - More than 80 percent of people + choose + TV + and + about 48 percent of people + choose + radio + as + a useful source .
+- - On the other hand + the graph + shows + that + many + people + are trying + to get + the + information + on the Internet .
+- - More than 35 percent of people + think + that + social media + give + them + useful information .
 
-- + Nobody + can + know + when + and + where + a natural disaster + will + happen .
-- + Today + we + experience + many + big + natural disasters + but + we + are + too busy + with + our daily lives + to think + about + them + every day .
-- + However + it + is + important + to get + the right information + and + skills + to prepare + for natural disasters .
+- - It + is + also + important + for us + to think + of the things + we + can + do + now .
+- - Actually + we + can + do + a lot of + things + to prepare + for natural disasters .
+- - For example + many + cities + have made + evacuation maps + which + show + where + to go + in natural disasters + such as + big earthquakes .
+- - If + we + share + the maps + with + our + family + or + our + neighbors + we + can + prepare + better .
+- - Since old times + evacuation maps + and + drills + have saved + many + people + from natural disasters .
+
+- - Nobody + can + know + when + and + where + a natural disaster + will + happen .
+- - Today + we + experience + many + big + natural disasters + but + we + are + too busy + with + our daily lives + to think + about + them + every day .
+- - However + it + is + important + to get + the right information + and + skills + to prepare + for natural disasters .
 
 ## 6. 重要な判断メモ
+
 - 原文の誤記修正（choose/people/prepare better）を正本・phrase-workへ反映済み。
 - phrase-work（英/日）を1文1行で分割済み。
