--- a/docs/quality/pattern-learning/J_2024_6.md
+++ b/docs/quality/pattern-learning/J_2024_6.md
@@ -1,9 +1,13 @@
+<!-- markdownlint-disable MD004 MD010 -->
+
 # J_2024_6
 
 ## 0. 原文（正本）
+
 - 参照: public/data/passages/1_passages-original/J_2024_6.txt
 
 ## 1. /分割
+
 - Sam: Yuka, / have you decided / how you're going to spend / your summer vacation?
 - Yuka: Not yet, Sam.
 - I'm planning / to travel abroad.
@@ -29,6 +33,7 @@
 - If I make my travel plan longer, / I can enjoy traveling / in the two cities.
 
 ## 2. ()分割
+
 - Sam: Yuka, have you decided (how you're going to spend your summer vacation)?
 - Yuka: Not yet, Sam.
 - I'm planning < to travel abroad >.
@@ -54,82 +59,86 @@
 - (If I make my travel plan longer), I can enjoy traveling < in the two cities >.
 
 ## 3. 直訳（フレーズ訳）
+
 - 英文: public/data/passages/3_passages-for-phrase-work/J_2024_6.txt
 - 日本語: public/data/passages/5_passages-for-phrase-work-ja/J_2024_6.txt（作成済み）
 
 ## 4. 一文訳
+
 - Sam: Yuka, have you decided how you're going to spend your summer vacation?
-	サム：ユカ、夏休みの過ごし方は決めた？
+  サム：ユカ、夏休みの過ごし方は決めた？
 - Yuka: Not yet, Sam.
-	ユカ：まだよ、サム。
+  ユカ：まだよ、サム。
 - I'm planning to travel abroad.
-	海外旅行を計画しているの。
+  海外旅行を計画しているの。
 - I want to go to Paris or Rome, but I can't decide which city to choose.
-	パリかローマに行きたいんだけど、どちらの都市を選ぶか決められないの。
+  パリかローマに行きたいんだけど、どちらの都市を選ぶか決められないの。
 - Sam: Both cities are great to visit.
-	サム：どちらの都市も訪れるには素晴らしいよ。
+  サム：どちらの都市も訪れるには素晴らしいよ。
 - Will it be your first trip to Europe?
-	ヨーロッパ旅行は初めてになるの？
+  ヨーロッパ旅行は初めてになるの？
 - Yuka: Yes, I've visited Australia before, but I've never traveled to Europe.
-	ユカ：うん、以前オーストラリアには行ったことがあるけど、ヨーロッパに旅行したことはないの。
+  ユカ：うん、以前オーストラリアには行ったことがあるけど、ヨーロッパに旅行したことはないの。
 - Traveling to Europe is expensive.
-	ヨーロッパ旅行は高額だけど、
+  ヨーロッパ旅行は高額だけど、
 - But this summer, I will go there.
-	この夏、そこに行くつもりよ。
+  この夏、そこに行くつもりよ。
 - Sam: I see.
-	サム：なるほど。
+  サム：なるほど。
 - What do you want to do during your trip?
-	旅行中に何がしたいの？
+  旅行中に何がしたいの？
 - Yuka: Well... I'm interested in history, so I want to visit some historical sites.
-	ユカ：そうね...歴史に興味があるから、歴史的な場所を訪れたいの。
+  ユカ：そうね...歴史に興味があるから、歴史的な場所を訪れたいの。
 - I want to try local foods, too.
-	地元の料理も試してみたいわ。
+  地元の料理も試してみたいわ。
 - Sam: Are you staying for about two weeks?
-	サム：2週間くらい滞在するの？
+  サム：2週間くらい滞在するの？
 - Yuka: No, for one week.
-	ユカ：いいえ、1週間よ。
+  ユカ：いいえ、1週間よ。
 - I wish I could visit the two cities during my trip.
-	旅行中に2つの都市を訪れられたらいいのにな。
+  旅行中に2つの都市を訪れられたらいいのにな。
 - Sam: It may be possible, Yuka.
-	サム：それは可能かもしれないよ、ユカ。
+  サム：それは可能かもしれないよ、ユカ。
 - I just checked the Internet and found a plan.
-	インターネットで調べたら、プランを見つけたんだ。
+  インターネットで調べたら、プランを見つけたんだ。
 - In this plan, you can visit both cities.
-	このプランなら、両方の都市を訪れることができるよ。
+  このプランなら、両方の都市を訪れることができるよ。
 - Look.
-	見て。
+  見て。
 - Yuka: That sounds great.
-	ユカ：それは素晴らしいわね。
+  ユカ：それは素晴らしいわね。
 - The travel fee is just 10,000 yen higher than my original plan.
-	旅行代金は私の元のプランより1万円高いだけね。
+  旅行代金は私の元のプランより1万円高いだけね。
 - If I make my travel plan longer, I can enjoy traveling in the two cities.
-	旅行プランを長くすれば、2つの都市での旅行を楽しめるわ。
+  旅行プランを長くすれば、2つの都市での旅行を楽しめるわ。
 
 ## 5. 語句分割
-- + Sam + Yuka + have + you + decided + how + you're + going to + spend + your + summer + vacation ?
-- + Yuka + Not yet + Sam .
-- + I'm + planning + to travel abroad .
-- + I + want + to go + to Paris or Rome + but + I + can't + decide + which + city + to choose .
-- + Sam + Both + cities + are + great + to visit .
-- + Will + it + be + your + first + trip + to Europe ?
-- + Yuka + Yes + I've + visited + Australia + before + but + I've + never + traveled + to Europe .
-- + Traveling + to Europe + is + expensive .
-- + But + this summer + I + will + go + there .
-- + Sam + I + see .
-- + What + do + you + want + to do + during + your + trip ?
-- + Yuka + Well + I'm + interested + in history + so + I + want + to visit + some + historical + sites .
-- + I + want + to try + local + foods + too .
-- + Sam + Are + you + staying + for about two weeks ?
-- + Yuka + No + for one week .
-- + I + wish + I + could + visit + the two cities + during + my + trip .
-- + Sam + It + may + be + possible + Yuka .
-- + I + just + checked + the + Internet + and + found + a + plan .
-- + In this plan + you + can + visit + both + cities .
-- + Look .
-- + Yuka + That + sounds + great .
-- + The + travel + fee + is + just + 10,000 yen + higher + than + my + original + plan .
-- + If + I + make + my + travel + plan + longer + I + can + enjoy + traveling + in the two cities .
+
+- - Sam + Yuka + have + you + decided + how + you're + going to + spend + your + summer + vacation ?
+- - Yuka + Not yet + Sam .
+- - I'm + planning + to travel abroad .
+- - I + want + to go + to Paris or Rome + but + I + can't + decide + which + city + to choose .
+- - Sam + Both + cities + are + great + to visit .
+- - Will + it + be + your + first + trip + to Europe ?
+- - Yuka + Yes + I've + visited + Australia + before + but + I've + never + traveled + to Europe .
+- - Traveling + to Europe + is + expensive .
+- - But + this summer + I + will + go + there .
+- - Sam + I + see .
+- - What + do + you + want + to do + during + your + trip ?
+- - Yuka + Well + I'm + interested + in history + so + I + want + to visit + some + historical + sites .
+- - I + want + to try + local + foods + too .
+- - Sam + Are + you + staying + for about two weeks ?
+- - Yuka + No + for one week .
+- - I + wish + I + could + visit + the two cities + during + my + trip .
+- - Sam + It + may + be + possible + Yuka .
+- - I + just + checked + the + Internet + and + found + a + plan .
+- - In this plan + you + can + visit + both + cities .
+- - Look .
+- - Yuka + That + sounds + great .
+- - The + travel + fee + is + just + 10,000 yen + higher + than + my + original + plan .
+- - If + I + make + my + travel + plan + longer + I + can + enjoy + traveling + in the two cities .
 
 ## 6. 重要な判断メモ
+
 - 原文の"Well..."後の空白を正本・phrase-workへ反映済み。
 - phrase-work（英/日）を1文1行で分割済み。
